--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,126 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+a {
+  text-decoration: none
+}
+a:link, a:visited {
+  color: white
+}
+
+li, ul, ol {
+  padding-top: 1px;
+  padding-bottom: 2px
+}
+p, ul {
+  margin-top: 0px
+}
+.swiper-pagination-bullet {
+  background-color: #ff6000 !important;
+}
+.swiper-pagination-bullet .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  color: #ff6000 !important;
+}
+
+:root {
+  /* Default theme */
+  --white: #fff;
+  --black: #000;
+  --black20: #00000044;
+  --grey: #b3b8cd;
+  --gray2: #989898;
+  --silver: #c0c0c0;
+  --silverLight: #c0c0c0;
+  --silverDark: #606060;
+  --mainGreen: #4affa5;
+  --green227: #227b4d;
+  --darkGrey: #2c2c2c;
+  --darkGrey42: #424242;
+  --background: #151515;
+  --backgroundMain: #0e0e0e;
+  --grey4: #2d2d2d;
+  --greybg: #1e1e1e;
+  --greyhover: #282828;
+  --dark24: #242424;
+  --darkGreen: #001208;
+  --darkGreen08: #082818;
+  --white-grey: #fff;
+  --box-shadow-light: "transparent";
+}
+
+[data-theme="light"] {
+  /* Light Theme Colors */
+  --white: #000;
+  --black: #fff;
+  --black20: #00000044;
+  --grey: #444444;
+  --gray2: #6e6e6e;
+  --silver: #d6d6d6;
+  --silverLight: #8f8f8f;
+  --silverCA: #828282;
+  --silverDark: #606060;
+  --mainGreen: #00b65b;
+  --green227: #06e447;
+  --darkGrey: #d4d4d4;
+  --darkGrey42: #d1d5db;
+  --background: #fff;
+  --backgroundMain: #fff;
+  --grey4: #d1d5db;
+  --greybg: #f6f6f6;
+  --greyhover: #d1d5db;
+  --dark24: #242424;
+  --darkGreen: #edfff6;
+  --darkGreen08: #edfff6;
+  --white-grey: #ebebeb;
+  --box-shadow-light: rgba(144, 144, 144, 0.337);
+}
+
+[data-theme="dark"] {
+  /* Dark Theme Colors */
+  --white: #fff;
+  --black: #000;
+  --black20: #00000044;
+  --grey: #b3b8cd;
+  --gray2: #989898;;
+  --silver: #c0c0c0;
+  --silverLight: #c0c0c0;
+  --silverCA: #cacaca;
+  --silverDark: #606060;
+  --mainGreen: #4affa5;
+  --green227: #227b4d;
+  --darkGrey: #2c2c2c;
+  --darkGrey42: #424242;
+  --background: #151515;
+  --backgroundMain: #0e0e0e;
+  --grey4: #2d2d2d;
+  --greybg: #1e1e1e;
+  --greyhover: #282828;
+  --dark24: #242424;
+  --darkGreen: #001208;
+  --darkGreen08: #082818;
+  --white-grey: #fff;
+  --box-shadow-light: "transparent";
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--background);
+  color: var(--black);
+  transition:
+    background-color 0.8s,
+    color 0.8s;
 }
+
