--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,29 +1,33 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 a {
-  text-decoration: none
+  text-decoration: none;
 }
-a:link, a:visited {
-  color: white
+a:link,
+a:visited {
+  color: white;
 }
 
-li, ul, ol {
+li,
+ul,
+ol {
   padding-top: 1px;
-  padding-bottom: 2px
+  padding-bottom: 2px;
 }
-p, ul {
-  margin-top: 0px
+p,
+ul {
+  margin-top: 0px;
 }
 .swiper-pagination-bullet {
   background-color: #ff6000 !important;
@@ -95,7 +99,7 @@ p, ul {
   --black: #000;
   --black20: #00000044;
   --grey: #b3b8cd;
-  --gray2: #989898;;
+  --gray2: #989898;
   --silver: #c0c0c0;
   --silverLight: #c0c0c0;
   --silverCA: #cacaca;
@@ -119,14 +123,24 @@ p, ul {
 body {
   background-color: var(--background);
   color: var(--black);
-  transition:
-    background-color 0.8s,
-    color 0.8s;
+  transition: background-color 0.8s, color 0.8s;
   max-height: 120vh;
   overflow: hidden;
 }
 
-
 .wrapper {
   height: 100vh;
 }
+
+.select {
+  background: #ff6000 !important;
+}
+
+.select > .MuiSelect-select {
+  color: #fff;
+  background: #ff6000 !important;
+}
+
+.select * {
+  color: #fff !important;
+} 
